@@ -6,6 +6,7 @@ Changelog
 
 - Add documentation for sharing endpoint. [njohner]
 - Always request UID from solr, as it is needed for snippets. [njohner]
+- Speed up validation of dossier resolution preconditions. [njohner]
 
 
 2020.1.0rc1 (2020-01-30)
